Fixed a bug on mobile view (bottom bar not aligning to bottom)

--- a/homepage.css
+++ b/homepage.css
@@ -3,6 +3,8 @@ body{
    font-family:arial, sans-serif;
    margin: 0;
    overflow-x:hidden;
+   
+  
    }
    a{
     margin-left:15px;
@@ -77,7 +79,7 @@ input:focus{
 }
 .bottom-bar{
     background-color: #f2f2f2;
-    position:absolute;
+    position:fixed;
     bottom:0;
     display:flex;
     align-items:center;
